--- a/localAgentLLM/dockerfile
+++ b/localAgentLLM/dockerfile
@@ -1,6 +1,7 @@
 FROM python:3.12-slim
 WORKDIR /app
+RUN mkdir -p /data
 RUN pip install --no-cache-dir flask
 COPY app.py /app/app.py
 EXPOSE 8089
-CMD ["python", "app.py"]
+CMD ["python", "/app/app.py"]
