--- a/localAgentLLM/dockerfile
+++ b/localAgentLLM/dockerfile
@@ -1,7 +1,7 @@
 FROM python:3.12-slim
 WORKDIR /app
 RUN mkdir -p /data
-RUN pip install --no-cache-dir flask
+RUN pip install --no-cache-dir flask requests
 COPY app.py /app/app.py
 EXPOSE 8089
 CMD ["python", "/app/app.py"]
