--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 localAgentLLM/data/agent.db
 localAgentLLM/__pycache__/app.cpython-313.pyc
 localAgentLLM/data/agent.db
+localAgentLLM/data/agent.db
